# image_downloader

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: __init__.py  main.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  photo_downloader.py  s3_service.py
app/settings/: __init__.py  settings.py
app/utils/: __init__.py  logger.py
cicd/: release.sh
